--- a/public/App.css
+++ b/public/App.css
@@ -182,6 +182,7 @@ header h1 {
 .PlannerContainer {
   /*to make sure header is fixed and that planner follows header*/
   position: fixed;
+  z-index: -1;
   top: 0;
   width: 100%;
   margin-top: 12.5vh;
@@ -216,7 +217,7 @@ header h1 {
 }
 
 /*Task styling*/
-#TaskContainer {
+.TaskContainer {
   background-color: white;
   width: 90px;
   height: 30px;
